Chat button overlapping issue fixed

--- a/app/styles/style.default.css
+++ b/app/styles/style.default.css
@@ -479,6 +479,10 @@ map area{
   color: #a94442;
 }
 
+.academy-video {
+    z-index: 20000000000 !important;
+}
+
 .ui-tooltip.ui-widget.ui-corner-all.ui-widget-content {
     display: none;
 }
